--- a/render.yaml
+++ b/render.yaml
@@ -6,17 +6,17 @@ services:
     region: oregon
     plan: free
     branch: main
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn config.wsgi:application"
+    buildCommand: "bash build.sh"
+    startCommand: "gunicorn config.wsgi:application --bind 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: False
-      - key: ALLOWED_HOSTS
-        value: .onrender.com
+        value: "False"
+      - key: RENDER
+        value: "True"
       - key: DATABASE_URL
         fromDatabase:
           name: psico-db
